--- a/src/Configure.mdx
+++ b/src/Configure.mdx
@@ -2,7 +2,7 @@ import { Meta } from '@storybook/addon-docs';
 
 <Meta title="Welcome" />
 
-# Welcome to Atomic SDK
+# Welcome to 3UM's Atomic SDK
 
 This component library is built following the atomic design principles. Our components are developed based on these rules and can be easily installed from npm.
 
@@ -33,24 +33,26 @@ Our library includes components from all levels of the atomic design methodology
 - Input
 - Label
 - Icon
+- Link
+- Logo
+- Form Input
 
 ### Molecules
-- SearchBar
-- Notification
-- MenuItem
+- AuthElements
+- FormField
+- NavItem
+- PropertyCard
 
 ### Organisms
 - Header
 - Footer
-- Sidebar
+- Contact Form
 
 ### Templates
-- DashboardTemplate
-- BlogPostTemplate
+- PropertyDetailsTemplate
 
 ### Pages
 - HomePage
-- ProfilePage
 
 ## Key Features
 
